force-app/main/default/objects/Case/fields/apellidoMaterno__c.field-meta.xml
<CustomField>
    <fullName>apellidoMaterno__c</fullName>
    <label>apellidoMaterno</label>
    <type>TextArea</type>
</CustomField>