force-app/main/default/objects/Case/fields/apellidoPaterno__c.field-meta.xml
<CustomField>
    <fullName>apellidoPaterno__c</fullName>
    <label>apellidoPaterno</label>
    <type>TextArea</type>
</CustomField>