force-app/main/default/objects/Case/fields/CC4i_Correo_del_Ejecutivo_Analista__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Correo_del_Ejecutivo_Analista__c</fullName>
    <label>Correo del Ejecutivo Analista</label>
    <type>Email</type>
</CustomField>