force-app/main/default/objects/Case/fields/CC4i_Correo_del_Liquidador__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Correo_del_Liquidador__c</fullName>
    <label>Correo del Liquidador</label>
    <type>Email</type>
</CustomField>