force-app/main/default/objects/Case/fields/CC4i_Correo_del_SAC__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Correo_del_SAC__c</fullName>
    <label>Correo del SAC</label>
    <type>Email</type>
</CustomField>