force-app/main/default/objects/Case/fields/CC4i_Correo_del_Taller__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Correo_del_Taller__c</fullName>
    <label>Correo del Taller</label>
    <type>Email</type>
</CustomField>