force-app/main/default/objects/Case/fields/CC4i_Direccion_del_Liquidador_Convenio__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Direccion_del_Liquidador_Convenio__c</fullName>
    <label>Dirección del Liquidador Convenio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>