force-app/main/default/objects/Case/fields/CC4i_Fecha_de_Denuncia__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Fecha_de_Denuncia__c</fullName>
    <label>Fecha de Denuncia</label>
    <type>DateTime</type>
</CustomField>