force-app/main/default/objects/Case/fields/CC4i_Hora_de_Llamada_Inicial__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Hora_de_Llamada_Inicial__c</fullName>
    <label>Hora de Llamada Inicial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>