force-app/main/default/objects/Case/fields/CC4i_Marca_del_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Marca_del_Vehiculo__c</fullName>
    <label>Marca del Vehículo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>