force-app/main/default/objects/Case/fields/CC4i_Modelo_del_Veh_culo__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Modelo_del_Veh_culo__c</fullName>
    <label>Modelo del Vehículo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>