force-app/main/default/objects/Case/fields/CC4i_Nombre_Completo_del_Liquidador__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Nombre_Completo_del_Liquidador__c</fullName>
    <label>Nombre Completo del Liquidador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>