force-app/main/default/objects/Case/fields/CC4i_Nombre_Completo_Ejecutivo_Analista__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Nombre_Completo_Ejecutivo_Analista__c</fullName>
    <label>Nombre Completo del Ejecutivo Analista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>