force-app/main/default/objects/Case/fields/CC4i_Nombre_del_SAC__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Nombre_del_SAC__c</fullName>
    <label>Nombre del SAC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>