force-app/main/default/objects/Case/fields/CC4i_Numero_de_Chasis__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Numero_de_Chasis__c</fullName>
    <label>Número de Chasis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>