force-app/main/default/objects/Case/fields/CC4i_Numero_de_Poliza__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Numero_de_Poliza__c</fullName>
    <label>Número de Póliza</label>
    <length>10</length>
    <type>Text</type>
</CustomField>