force-app/main/default/objects/Case/fields/CC4i_Numero_de_Siniestro__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Numero_de_Siniestro__c</fullName>
    <label>Número de Siniestro</label>
    <length>10</length>
    <type>Text</type>
</CustomField>