force-app/main/default/objects/Case/fields/CC4i_Patente_del_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Patente_del_Vehiculo__c</fullName>
    <label>Patente del Vehículo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>