force-app/main/default/objects/Case/fields/CC4i_Rut_del_Ejecutivo_Analista__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Rut_del_Ejecutivo_Analista__c</fullName>
    <label>Rut del Ejecutivo Analista</label>
    <length>10</length>
    <type>Text</type>
</CustomField>