force-app/main/default/objects/Case/fields/CC4i_Rut_del_Liquidador__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Rut_del_Liquidador__c</fullName>
    <label>Rut del Liquidador</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>