force-app/main/default/objects/Case/fields/CC4i_Telefono_de_Servicios_de_Asistencia__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Telefono_de_Servicios_de_Asistencia__c</fullName>
    <label>Teléfono de Servicios de Asistencia</label>
    <type>Phone</type>
</CustomField>