force-app/main/default/objects/Case/fields/CC4i_Telefono_del_Ejecutivo_Analista__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Telefono_del_Ejecutivo_Analista__c</fullName>
    <label>Teléfono del Ejecutivo Analista</label>
    <type>Phone</type>
</CustomField>