force-app/main/default/objects/Case/fields/CC4i_Telefono_del_Liquidador__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Telefono_del_Liquidador__c</fullName>
    <label>Teléfono del Liquidador</label>
    <type>Phone</type>
</CustomField>