force-app/main/default/objects/Case/fields/CC4i_Telefono_del_Liquidador_Convenio__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Telefono_del_Liquidador_Convenio__c</fullName>
    <label>Teléfono del Liquidador Convenio</label>
    <type>Phone</type>
</CustomField>