force-app/main/default/objects/Case/fields/CC4i_Telefono_del_SAC__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Telefono_del_SAC__c</fullName>
    <label>Teléfono del SAC</label>
    <type>Phone</type>
</CustomField>