force-app/main/default/objects/Case/fields/CC4i_Telefono_del_Taller__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Telefono_del_Taller__c</fullName>
    <label>Teléfono del Taller</label>
    <type>Phone</type>
</CustomField>