force-app/main/default/objects/Case/fields/CC4i_Valor_UF__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Valor_UF__c</fullName>
    <label>Valor UF</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>