force-app/main/default/objects/Case/fields/CC4i_Year_del_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Year_del_Vehiculo__c</fullName>
    <label>Año del  Vehículo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>