force-app/main/default/objects/Case/fields/correo__c.field-meta.xml
<CustomField>
    <fullName>correo__c</fullName>
    <label>correo</label>
    <type>Email</type>
</CustomField>