force-app/main/default/objects/Case/fields/fechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>fechaNacimiento__c</fullName>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>