force-app/main/default/objects/Case/fields/FinServ__Household__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Cases</relationshipLabel>
    <relationshipName>HouseholdCases</relationshipName>
    <type>Lookup</type>
</CustomField>