force-app/main/default/objects/Case/fields/GLB_P1_Autor__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Autor__c</fullName>
    <label>Autor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>