force-app/main/default/objects/Case/fields/GLB_P1_Canal__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>709460001</fullName>
                <label>Auto-atención IVR</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Buk</label>
            </value>
            <value>
                <fullName>709460003</fullName>
                <label>Chat</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>CMF</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Contacto Web</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Correo electrónico</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>DDA</label>
            </value>
            <value>
                <fullName>Escrito</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Integración</fullName>
            </value>
            <value>
                <fullName>IVR telefónico</fullName>
            </value>
            <value>
                <fullName>IVR whatsapp</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>PGU</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>PLANEX</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Portal Corredores</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Presencial</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Redes sociales</label>
            </value>
            <value>
                <fullName>709460002</fullName>
                <label>SERNAC</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Telefónico</label>
            </value>
            <value>
                <fullName>709460000</fullName>
                <label>Telefónico-Avaya</label>
            </value>
            <value>
                <fullName>Voz</fullName>
            </value>
            <value>
                <fullName>709460004</fullName>
                <label>Whatsapp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>