force-app/main/default/objects/Case/fields/GLB_P1_ComentarioRechazo__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_ComentarioRechazo__c</fullName>
    <label>Comentario de rechazo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>