force-app/main/default/objects/Case/fields/GLB_P1_DiasTranscurridos__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_DiasTranscurridos__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días transcurridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>