force-app/main/default/objects/Case/fields/GLB_P1_Direccion__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Direccion__c</fullName>
    <formula>Account.ShippingStreet &amp; &quot; ,&quot; &amp;  Account.ShippingCity &amp; &quot; -&quot; &amp;   Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domicilio</label>
    <type>Text</type>
</CustomField>