force-app/main/default/objects/Case/fields/GLB_P1_EquipoAsignadoArea__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_EquipoAsignadoArea__c</fullName>
    <defaultValue>&quot;Rescate&quot;</defaultValue>
    <label>Equipo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>