force-app/main/default/objects/Case/fields/GLB_P1_EquipoPropietarioActual__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_EquipoPropietarioActual__c</fullName>
    <label>Equipo Propietario actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>