force-app/main/default/objects/Case/fields/GLB_P1_EstadoSLA__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_EstadoSLA__c</fullName>
    <label>Estado SLA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>