force-app/main/default/objects/Case/fields/GLB_P1_ExpiraEn3__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_ExpiraEn3__c</fullName>
    <formula>SlaStartDate +10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expira en</label>
    <type>DateTime</type>
</CustomField>