force-app/main/default/objects/Case/fields/GLB_P1_FechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaCreacion__c</fullName>
    <formula>DATEVALUE( CreatedDate  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Creación</label>
    <type>Date</type>
</CustomField>