force-app/main/default/objects/Case/fields/GLB_P1_FechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaNacimiento__c</fullName>
    <formula>Account.PersonBirthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>