force-app/main/default/objects/Case/fields/GLB_P1_FechaVencimientoCaso__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaVencimientoCaso__c</fullName>
    <label>Fecha de Vencimiento del caso</label>
    <type>Date</type>
</CustomField>