force-app/main/default/objects/Case/fields/GLB_P1_Grupo__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Grupo__c</fullName>
    <label>Grupo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>