force-app/main/default/objects/Case/fields/GLB_P1_IDExternoCaso__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_IDExternoCaso__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo del caso</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>