force-app/main/default/objects/Case/fields/GLB_P1_Intermediario__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Intermediario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Intermediario)</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>