force-app/main/default/objects/Case/fields/GLB_P1_LineaNegocios__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_LineaNegocios__c</fullName>
    <label>Línea de Negocios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colectivo</fullName>
            </value>
            <value>
                <fullName>Fondos Mutuos</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Miscelaneos</fullName>
            </value>
            <value>
                <fullName>Motors</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Protección Familiar</fullName>
            </value>
            <value>
                <fullName>RC - Varios</fullName>
            </value>
            <value>
                <fullName>Renta Vitalicia</fullName>
            </value>
            <value>
                <fullName>S. Desgravamen</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Linea 1</fullName>
                <isActive>false</isActive>
                <label>Linea 1</label>
            </value>
            <value>
                <fullName>Linea 2</fullName>
                <isActive>false</isActive>
                <label>Linea 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>