force-app/main/default/objects/Case/fields/GLB_P1_MotivoConfigurador__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_MotivoConfigurador__c</fullName>
    <label>Motivo Configurador</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>