force-app/main/default/objects/Case/fields/GLB_P1_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>