force-app/main/default/objects/Case/fields/GLB_P1_PlazoArea2__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PlazoArea2__c</fullName>
    <defaultValue>&quot;2 DH&quot;</defaultValue>
    <label>Plazo área 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>