force-app/main/default/objects/Case/fields/GLB_P1_PlazoArea3__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PlazoArea3__c</fullName>
    <defaultValue>&quot;1 DH&quot;</defaultValue>
    <label>Plazo área 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>