force-app/main/default/objects/Case/fields/GLB_P1_RUT__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_RUT__c</fullName>
    <formula>Account.ZRH_LM_RUT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RUT</label>
    <type>Text</type>
</CustomField>