force-app/main/default/objects/Case/fields/GLB_P1_Sexo__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Sexo__c</fullName>
    <formula>TEXT(Account.FinServ__Gender__pc)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sexo</label>
    <type>Text</type>
</CustomField>