force-app/main/default/objects/Case/fields/GLB_P1_SLAGeneral__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_SLAGeneral__c</fullName>
    <defaultValue>10</defaultValue>
    <label>SLA General (DH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>