force-app/main/default/objects/Case/fields/GLB_P1_SLANuevo__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_SLANuevo__c</fullName>
    <defaultValue>5</defaultValue>
    <label>SLA estado Nuevo (DH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>