force-app/main/default/objects/Case/fields/GLB_P1_SlaReal__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_SlaReal__c</fullName>
    <formula>NOW() -  SlaStartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>