force-app/main/default/objects/Case/fields/GLB_P1_TiempoRestante__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_TiempoRestante__c</fullName>
    <formula>IF( NOT(ISBLANK(GLB_P1_SLAGeneral__c)), GLB_P1_SLAGeneral__c  -GLB_P1_SlaReal__c, null
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Restante (DH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>