force-app/main/default/objects/Case/fields/GLB_P1_Tipificacion__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Tipificacion__c</fullName>
    <label>Tipificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cotización</fullName>
            </value>
            <value>
                <fullName>Genéricas</fullName>
                <isActive>false</isActive>
                <label>Genéricas</label>
            </value>
            <value>
                <fullName>Genérica Salesforce</fullName>
                <isActive>false</isActive>
                <label>Genérica Salesforce</label>
            </value>
            <value>
                <fullName>Información del siniestro</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Reembolso</fullName>
            </value>
            <value>
                <fullName>Requerimiento</fullName>
                <isActive>false</isActive>
                <label>Requerimiento</label>
            </value>
            <value>
                <fullName>Tipi1</fullName>
                <isActive>false</isActive>
                <label>Tipi1</label>
            </value>
            <value>
                <fullName>Tipi2</fullName>
                <isActive>false</isActive>
                <label>Tipi2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>