force-app/main/default/objects/Case/fields/GLBP1_Activo_de_p_liza_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Activo_de_p_liza_de_seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activo de póliza de seguro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.GLBP1_Poliza_de_seguro__c</field>
            <operation>equals</operation>
            <valueField>InsurancePolicyAsset.InsurancePolicy.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>InsurancePolicyAsset</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>