force-app/main/default/objects/Case/fields/GLBP1_Bien_asegurado__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Bien_asegurado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bien asegurado</label>
    <referenceTo>GLBP1_Bien_declarado__c</referenceTo>
    <relationshipLabel>Bienes de Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>