force-app/main/default/objects/Case/fields/GLBP1_Estado_solicitud__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Estado_solicitud__c</fullName>
    <label>Estado solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Resuelto</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>