force-app/main/default/objects/Case/fields/GLBP1_Mensaje_sincronizaci_n__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Mensaje_sincronizaci_n__c</fullName>
    <label>Mensaje sincronización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>