force-app/main/default/objects/Case/fields/GLBP1_Poliza_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Poliza_de_seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Póliza de seguro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>InsurancePolicy.NameInsured.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>