force-app/main/default/objects/Case/fields/GLBP1_Taller__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Taller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Taller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Taller)</relationshipLabel>
    <relationshipName>Casos_Taller</relationshipName>
    <type>Lookup</type>
</CustomField>