force-app/main/default/objects/Case/fields/Messaging_User__c.field-meta.xml
<CustomField>
    <fullName>Messaging_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging User</label>
    <referenceTo>MessagingEndUser</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>