force-app/main/default/objects/Case/fields/nombre__c.field-meta.xml
<CustomField>
    <fullName>nombre__c</fullName>
    <label>nombre</label>
    <type>TextArea</type>
</CustomField>