force-app/main/default/objects/Case/fields/rut__c.field-meta.xml
<CustomField>
    <fullName>rut__c</fullName>
    <label>rut</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>