force-app/main/default/objects/Case/fields/sexo__c.field-meta.xml
<CustomField>
    <fullName>sexo__c</fullName>
    <label>sexo</label>
    <type>TextArea</type>
</CustomField>