force-app/main/default/objects/Case/fields/telefono__c.field-meta.xml
<CustomField>
    <fullName>telefono__c</fullName>
    <label>telefono</label>
    <type>Phone</type>
</CustomField>