force-app/main/default/objects/Case/fields/ZU4i_rut__c.field-meta.xml
<CustomField>
    <fullName>ZU4i_rut__c</fullName>
    <label>ZU4i_rut</label>
    <length>50</length>
    <type>Text</type>
</CustomField>