force-app/main/default/objects/Case/recordTypes/Gen_rico.recordType-meta.xml
<RecordType>
    <fullName>Gen_rico</fullName>
    <active>true</active>
    <businessProcess>GLB_P1_ConsultaCaso</businessProcess>
    <description>Registro de Caso recepcionado no clasificado</description>
    <label>Genérico</label>
</RecordType>