force-app/main/default/objects/Case/recordTypes/GLB_P1_Consulta.recordType-meta.xml
<RecordType>
    <fullName>GLB_P1_Consulta</fullName>
    <active>true</active>
    <businessProcess>GLB_P1_ConsultaCaso</businessProcess>
    <label>Consulta</label>
</RecordType>