force-app/main/default/objects/Case/recordTypes/GLB_P1_Reclamo.recordType-meta.xml
<RecordType>
    <fullName>GLB_P1_Reclamo</fullName>
    <active>true</active>
    <businessProcess>GLB_P1_ReclamoCaso</businessProcess>
    <label>Reclamo</label>
</RecordType>