force-app/main/default/objects/Case/recordTypes/GLB_P1_Requerimiento.recordType-meta.xml
<RecordType>
    <fullName>GLB_P1_Requerimiento</fullName>
    <active>true</active>
    <businessProcess>GLB_P1_RequerimientoCaso</businessProcess>
    <label>Requerimiento</label>
</RecordType>